--- a/saie/web-app/reports/preinscripcion/reportepreinscripcion.jrxml
+++ b/saie/web-app/reports/preinscripcion/reportepreinscripcion.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="carrerasreporte" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.1"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="263"/>
+	<property name="ireport.y" value="553"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Andrea\\Documents\\workspace-sts-2.3.3.M2\\saie\\web-app\\reports\\carrera\\"]]></defaultValueExpression>
 	</parameter>
@@ -10,6 +10,7 @@
 	<field name="[0].alumno.nombre" class="java.lang.String"/>
 	<field name="[1]" class="java.util.Collection"/>
 	<field name="[0].carrera.denominacion" class="java.lang.String"/>
+	<field name="[2]" class="java.util.Collection"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -61,7 +62,7 @@ Firma del solicitante]]></text>
 			</staticText>
 			<subreport>
 				<reportElement stretchType="RelativeToTallestObject" x="281" y="71" width="260" height="62"/>
-				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[2]})]]></dataSourceExpression>
 				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
 			</subreport>
 		</band>
@@ -107,7 +108,7 @@ Firma del solicitante]]></text>
 			</staticText>
 			<subreport>
 				<reportElement stretchType="RelativeToTallestObject" x="281" y="72" width="260" height="62"/>
-				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[2]})]]></dataSourceExpression>
 				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
 			</subreport>
 			<subreport>
@@ -158,7 +159,7 @@ Firma del solicitante]]></text>
 			</staticText>
 			<subreport>
 				<reportElement stretchType="RelativeToTallestObject" x="282" y="69" width="260" height="62"/>
-				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[1]})]]></dataSourceExpression>
+				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{[2]})]]></dataSourceExpression>
 				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR},"reportepreinscripcion_detallematerias.jasper")]]></subreportExpression>
 			</subreport>
 			<subreport>
