--- a/saie/web-app/reports/divisiones/reportedivisiones.jrxml
+++ b/saie/web-app/reports/divisiones/reportedivisiones.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="carrerasreporte" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.771561000000001"/>
-	<property name="ireport.x" value="115"/>
+	<property name="ireport.x" value="143"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Andrea\\Documents\\workspace-sts-2.3.3.M2\\saie\\web-app\\reports\\carrera\\"]]></defaultValueExpression>
@@ -110,7 +110,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{descripcion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="328" y="0" width="29" height="12"/>
+				<reportElement x="329" y="0" width="29" height="12"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial"/>
 				</textElement>
@@ -145,8 +145,8 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{nivel.carrera.denominacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="236" y="0" width="100" height="13"/>
-				<textElement>
+				<reportElement x="255" y="0" width="67" height="13"/>
+				<textElement textAlignment="Center">
 					<font fontName="Arial"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{aula.nombre}]]></textFieldExpression>
