--- a/saie/web-app/reports/carrera/carrerasreporte.jrxml
+++ b/saie/web-app/reports/carrera/carrerasreporte.jrxml
@@ -1,81 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="carrerasreporte" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="7"/>
+	<property name="ireport.zoom" value="1.6105100000000008"/>
+	<property name="ireport.x" value="313"/>
+	<property name="ireport.y" value="0"/>
 	<subDataset name="Table Dataset 1"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["C:\\Users\\Andrea\\Documents\\workspace-sts-2.3.3.M2\\saie\\web-app\\reports\\carrera\\"]]></defaultValueExpression>
 	</parameter>
+	<parameter name="nombreinstitucion" class="java.lang.String"/>
+	<parameter name="direccioninstitucion" class="java.lang.String"/>
+	<parameter name="telefonoinstitucion" class="java.lang.String"/>
 	<field name="denominacion" class="java.lang.String"/>
 	<field name="duracion" class="java.lang.Integer"/>
 	<field name="campoOcupacional" class="java.lang.String"/>
 	<field name="requisitos" class="java.util.Collection"/>
 	<field name="niveles" class="java.util.Collection"/>
 	<field name="anios" class="java.util.Collection"/>
+	<field name="modalidadFormacion.name" class="java.lang.String"/>
+	<field name="perfilEgresado" class="java.lang.String"/>
+	<field name="titulo" class="java.lang.String"/>
+	<field name="validezTitulo" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="65" splitType="Stretch">
+		<band height="33" splitType="Stretch">
 			<staticText>
-				<reportElement x="194" y="38" width="190" height="20"/>
+				<reportElement x="150" y="0" width="190" height="20"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Listado de Carreras]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="377" y="0" width="178" height="20"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreinstitucion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="367" y="20" width="180" height="11"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{direccioninstitucion}.concat(' - ').concat($P{telefonoinstitucion})]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<detail>
-		<band height="100" splitType="Prevent">
-			<textField pattern="">
-				<reportElement mode="Opaque" x="72" y="2" width="194" height="13"/>
-				<textElement>
-					<font fontName="Arial" size="10" isBold="true"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{denominacion}]]></textFieldExpression>
-			</textField>
+		<band height="101" splitType="Prevent">
+			<rectangle>
+				<reportElement x="1" y="1" width="555" height="14" backcolor="#CCCCCC"/>
+			</rectangle>
 			<textField>
-				<reportElement x="348" y="2" width="72" height="13"/>
-				<textElement textAlignment="Center">
+				<reportElement x="324" y="3" width="72" height="13"/>
+				<textElement>
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$F{duracion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="1" y="42" width="555" height="26"/>
+				<reportElement x="1" y="44" width="555" height="26"/>
 				<textElement textAlignment="Justified">
 					<font fontName="Arial" size="8"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{campoOcupacional}]]></textFieldExpression>
 			</textField>
 			<subreport>
-				<reportElement stretchType="RelativeToBandHeight" x="14" y="68" width="353" height="28"/>
+				<reportElement stretchType="RelativeToBandHeight" x="14" y="70" width="353" height="28"/>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{requisitos})]]></dataSourceExpression>
 				<subreportExpression class="java.io.File"><![CDATA[new File($P{SUBREPORT_DIR} , "carrerasreporterequisitos.jasper")]]></subreportExpression>
 			</subreport>
 			<staticText>
-				<reportElement x="242" y="2" width="125" height="15"/>
+				<reportElement x="273" y="2" width="61" height="15"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
 				</textElement>
-				<text><![CDATA[Duración (Años)]]></text>
+				<text><![CDATA[Duración:]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="1" y="2" width="71" height="15"/>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Denominación]]></text>
+				<text><![CDATA[Denominación:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="27" width="97" height="15"/>
-				<textElement textAlignment="Center">
+				<reportElement x="0" y="29" width="97" height="15"/>
+				<textElement>
 					<font fontName="Arial" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Campo Ocupacional:]]></text>
 			</staticText>
+			<textField pattern="">
+				<reportElement mode="Transparent" x="70" y="2" width="194" height="13"/>
+				<textElement>
+					<font fontName="Arial" size="10" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{denominacion}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="1" y="17" width="48" height="12"/>
+				<textElement>
+					<font fontName="Arial" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Modalidad:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="50" y="17" width="57" height="12"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{modalidadFormacion.name}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="107" y="17" width="70" height="12"/>
+				<textElement>
+					<font fontName="Arial" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Perfil Egresado:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="177" y="17" width="157" height="12"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{perfilEgresado}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="342" y="17" width="35" height="12"/>
+				<textElement>
+					<font fontName="Arial" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Titulo:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="370" y="17" width="177" height="12"/>
+				<textElement>
+					<font size="8" isBold="true"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{titulo}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="396" y="2" width="61" height="15"/>
+				<textElement textAlignment="Center">
+					<font fontName="Arial" size="9" isBold="true" isPdfEmbedded="false"/>
+				</textElement>
+				<text><![CDATA[Validez:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="447" y="4" width="100" height="12"/>
+				<textElement>
+					<font fontName="Arial" size="8"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$F{validezTitulo}]]></textFieldExpression>
+			</textField>
 		</band>
 		<band height="35">
 			<subreport>
